<resources>
    <string name="app_name">Pizza Palin</string>
    <string name="welcome">Welcome to Pizza Palin</string>
    <string name="input_name">Enter your name</string>
    <string name="input_city">Enter your city</string>
    <string name="input_address">Enter your address</string>
    <string name="btn_start">start order</string>
    <string name="output">You need to fill in all the details</string>
    <string name="Hello">Hii</string>
    <string name="size_pizza">Choose the size of your pizza:</string>
    <string name="small">small 20 NIS</string>
    <string name="medium">medium 35 NIS</string>
    <string name="large">large 50 NIS</string>
    <string name="toping">Click to add toping- 5 NIS to top</string>
    <string name="name">name:</string>
    <string name="city">city:</string>
    <string name="address">address:</string>
    <string name="finishOrder">finish</string>
    <string name="addDrink">click to add drink- 10 NIS for bottel</string>
    <string name="Reset">Reset</string>
    <string name="NumDrink_input">Enter bottles number</string>
    <string name="NumDrinkText">The amount of bottles:</string>
    <string name="drinkText">drink:</string>
    <string name="cola">Coca Cola</string>
    <string name="sprite">Sprite</string>
    <string name="fuzeTea">Fuze Tea</string>
    <string name="water">Mineral water</string>
    <string name="grape">Grape juice</string>
    <string name="orange">Orange juice</string>
    <string name="Select">Select</string>
    <string name="WrongDrink">you need to enter number of boottels</string>
    <string name="alertTextFinish">you sure you want to finish?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="alertTextReset">you sure you want to reset?</string>
    <string name="wrongFinish">you have to order someting</string>
    <string name="colaZiro">Cola Ziro</string>
    <string name="spraiteZero">Sprite Zero</string>
    <string name="panta">Fanta</string>
    <string name="FinishTitel">Order details</string>
    <string name="thankText">Thank you for buying from Pizza Palin</string>
    <string name="toAddress">The pizza come to address:</string>
    <string name="toCity">in city:</string>
    <string name="comeSoon">The pizza will arrive soon</string>
    <string name="cost">The price is:</string>
    <string name="buyPizza">you buy one pizza</string>
    <string name="topinigText">toping</string>
    <string name="buyBottles">and</string>
    <string name="bottelsText">drink</string>
    <string name="noBottels">without drinks</string>
    <string name="noToping">without toping</string>
    <string name="with"> with</string>
    <string name="buyBot">buy</string>
    <string name="nis">NIS</string>
</resources>