<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backpizza"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView android:layout_width="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_height="40dp"
        android:src="@drawable/mrpizza"
        android:layout_gravity="center"
        android:background="@null"
        android:scaleType="fitXY" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp" />

</LinearLayout>
    <RelativeLayout
        android:id="@+id/edittext_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="30dp"
            android:layout_marginTop="30dp"
            android:id="@+id/textName" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/input_name"
            android:layout_toEndOf="@+id/textName"
            android:layout_alignBaseline="@+id/textName"
            android:background="@drawable/text_selector"/>

        <TextView
            android:layout_below="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="30dp"
            android:layout_marginTop="30dp"
            android:id="@+id/cityText"/>
        <EditText
            android:id="@+id/input_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/input_city"
            android:layout_toEndOf="@+id/cityText"
            android:layout_alignBaseline="@+id/cityText"
            android:background="@drawable/text_selector"/>

        <TextView
            android:layout_below="@+id/cityText"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="30dp"
            android:id="@+id/adressText" />

        <EditText
            android:id="@+id/input_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/input_address"
            android:layout_toEndOf="@+id/adressText"
            android:layout_alignBaseline="@+id/adressText"
            android:background="@drawable/text_selector"/>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/start_btn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/edittext_layout"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:scaleType="fitXY"
        android:src="@drawable/image_selector" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_btn"
        android:gravity="center"
        android:text="@string/btn_start"
        android:textColor="@color/textColor"
        android:textSize="20dp" />

</LinearLayout>